--- a/src/main/webapp/static/bootstrap/2.3.1/css_cerulean/index.css
+++ b/src/main/webapp/static/bootstrap/2.3.1/css_cerulean/index.css
@@ -20,7 +20,7 @@ img {border:none;}
 	/*****Generic Classes*****/
 .dgs11{ margin: 0px;
 padding:0px;
- background:url(../../../cabinet/images/dl_bj.jpg);
+ background:url(../../../growtogether/images/dl_bj.jpg);
 	background-size: cover;
 	background-position: center top; 
     background-repeat: no-repeat;
